# ChangeLog for gnome-base/nautilus
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.266 2008/06/29 22:34:34 eva Exp $

*nautilus-2.22.3-r1 (29 Jun 2008)

  29 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/nautilus-2.22.3-open-folder.patch,
  +files/nautilus-2.22.3-preserve-metadata.patch,
  +files/nautilus-2.22.3-prevent-recursive-mvcp.patch,
  +nautilus-2.22.3-r1.ebuild:
  add patches from bugs #229719, #229723, #216391

  08 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -nautilus-2.18.1-r1.ebuild, -nautilus-2.18.3-r1.ebuild,
  -nautilus-2.22.1.ebuild:
  clean up old revisions.

*nautilus-2.22.3 (29 May 2008)

  29 May 2008; Rémi Cardona <remi@gentoo.org> +nautilus-2.22.3.ebuild:
  bump to 2.22.3, no more patches needed, some big bug fix and a few
  optimizations

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  +files/nautilus-2.20.0-fix_broken_configure.patch,
  nautilus-2.20.0-r1.ebuild:
  Also add configure fix to latest unmasked version.

  10 Apr 2008; Rémi Cardona <remi@gentoo.org>
  +files/nautilus-2.22.2-fix_broken_configure.patch, nautilus-2.22.2.ebuild:
  Fix for autoconf 2.62, see Gnome Bug #527315

*nautilus-2.22.2 (10 Apr 2008)

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/nautilus-2.22.2-no-esound.patch, +nautilus-2.22.2.ebuild:
  bump to 2.22.2. Bug fixing and startup enhancements.

  04 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -nautilus-2.22.0.ebuild, nautilus-2.22.1.ebuild:
  get back the FEATURES="test" fix from the 2.20 series

  02 Apr 2008; Daniel Gryniewicz <dang@gentoo.org>
  nautilus-2.20.0-r1.ebuild, nautilus-2.22.0.ebuild, nautilus-2.22.1.ebuild:
  Fix beagle deps; bug #211962 and bug #211967

  01 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> ChangeLog:
  bump to 2.22.1. Most of our patchset is now included fixing various bugs.
  Recursive symlink crash should now be fixed, bug #190340.
